@@ -1,7 +1,9 @@
 <b>2009-06-19</b>
 
+* Language selector available for profile, trip display
 * Switch UI language to user preference on login
 * Bug: Facebook "Sign up" link was broken
+* Additional translation for Finnish (fi)
 
 <b>2009-06-16</b>
 
